# LearnOGL

./: .gitignore  CMakeLists.txt  ShaderOne.vert  glad.c  main.cpp
include/: logl_fio.h  logl_print.h  logl_window.h  utility.h
src/: logl_fio.cpp  logl_print.cpp  logl_print.h  logl_window.cpp  main.cpp
